--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -46,7 +46,8 @@
                   <p>Don't have an account?</p>
                   <a class="btn get-started-btn" href="register-2.html">GET STARTED</a>
                 </div>
-                <form action="#">
+                <form action="{% url 'accounts:authentification' %}" method="POST">
+                    {% csrf_token %}
                   <h3 class="mr-auto">Hello! let's get started</h3>
                   <p class="mb-5 mr-auto">Enter your details below.</p>
                   <div class="form-group">
@@ -54,7 +55,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="mdi mdi-account-outline"></i></span>
                       </div>
-                      <input type="text" class="form-control" placeholder="Username">
+                      <input type="text" name="username" class="form-control" placeholder="Username">
                     </div>
                   </div>
                   <div class="form-group">
@@ -62,7 +63,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="mdi mdi-lock-outline"></i></span>
                       </div>
-                      <input type="password" class="form-control" placeholder="Password">
+                      <input type="password" name="password" class="form-control" placeholder="Password">
                     </div>
                   </div>
                   <div class="form-group">
